WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197776
ASSERT(isSelfPaintingLayer() || hasSelfPaintingLayerDescendant()) on nytimes.com after
r245170
https://bugs.webkit.org/show_bug.cgi?id=197776
Summary
ASSERT(isSelfPaintingLayer() || hasSelfPaintingLayerDescendant()) on nytimes....
Simon Fraser (smfr)
Reported
2019-05-10 08:51:21 PDT
Antti says
https://trac.webkit.org/changeset/245170/webkit
caused assertions on nytimes.com
Attachments
Patch
(5.38 KB, patch)
2019-05-10 10:51 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-05-10 10:51:15 PDT
Created
attachment 369569
[details]
Patch
WebKit Commit Bot
Comment 2
2019-05-10 11:41:04 PDT
Comment on
attachment 369569
[details]
Patch Clearing flags on attachment: 369569 Committed
r245181
: <
https://trac.webkit.org/changeset/245181
>
WebKit Commit Bot
Comment 3
2019-05-10 11:41:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-05-10 11:43:31 PDT
<
rdar://problem/50670806
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug